--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:hello@kimmj.com
+      url: mailto:connect@kimmj.com
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
       url: "https://www.linkedin.com/in/kimmminjae"
