added https in url param

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Min Jae Kim"
 title_separator          : "-"
 name                     : "Min Jae Kim"
 description              : "Software Developer Portfolio"
-url                      : "www.kimmj.com"
+url                      : "https://www.kimmj.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
