--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Minjae's Blog"
+title                    : "Minjae Kim"
 title_separator          : "-"
 name                     : "Minjae Kim"
 description              : "Sitecore Developer's Blog"
