--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Min Jae Kim"
+  name             : "Minjae Kim"
   avatar           : "/assets/images/bio-photo.jpg"
   bio              : ""
   location         : "Toronto, ON"
