--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Minjae Kim"
 title_separator          : "-"
 name                     : "Minjae Kim"
 description              : "Sitecore Developer's Blog"
-url                      : "https://www.kimmj.com"
+url                      : "https://www.minjae.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -114,7 +114,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:connect@kimmj.com
+      url: mailto:k.minjae@outlook.com
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
       url: "https://www.linkedin.com/in/kimmminjae"
