--- a/_config.yml
+++ b/_config.yml
@@ -130,6 +130,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/kimminjaeee"
+    - label: "Resume"
+      icon: "far fa-file-alt"
+      url: "/files/Resume_Min-Jae-Kim.pdf"
   certifications:
     - label: "Sitecore"
       icon: "fab fa-stripe-s"
