--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Minjae Kim"
 title_separator          : "-"
 name                     : "Minjae Kim"
-description              : "Tech/Life Blog. I'm a software developer specializing in Sitecore XP, Sitecore Content Hub, Optimizely (Episerver), Coveo, and ASP.NET projects."
+description              : "Blog about my life in tech and my projects. I'm a software developer specializing in Sitecore XP, Content Hub, Optimizely (Episerver), Coveo, and ASP.NET."
 url                      : "https://www.minjae.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
