--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "CV"
-    url: /files/Resume_Min-Jae-Kim.pdf
+  - title: "Resume"
+    url: /files/Resume_Minjae-Kim.pdf
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
