--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "Resume"
-    url: /files/Resume_Minjae-Kim.pdf
+  - title: "LinkedIn"
+    url: https://www.linkedin.com/in/kimmminjae/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
